err/jaro-winkler.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jaro'...
Compiling './lib/python3.5/site-packages/jaro/compare_jaro.py'...
***   File "./lib/python3.5/site-packages/jaro/compare_jaro.py", line 57
    print rearrange
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jaro/compare_strcmp95.py'...
***   File "./lib/python3.5/site-packages/jaro/compare_strcmp95.py", line 28
    print "Can't find compiled version of %s.c to test!" % basename
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jaro/jaro.py'...
***   File "./lib/python3.5/site-packages/jaro/jaro.py", line 324
    print 'Jaro: %7.5f, Jaro-Winkler: %7.5f, Original: %7.5f.' % (
                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jaro/jaro_tests.py'...
***   File "./lib/python3.5/site-packages/jaro/jaro_tests.py", line 151
    print s1, s2
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jaro/strcmp95.py'...
***   File "./lib/python3.5/site-packages/jaro/strcmp95.py", line 68
    print '  ' + col_chars
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jaro/typo_tables.py'...
***   File "./lib/python3.5/site-packages/jaro/typo_tables.py", line 90
    print '  ' + col_chars
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/jaro_winkler-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
